--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color: #1abc9c">
-    <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center">
+    <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color: white">
         Location de voiture
     </h1>
 </body>
